--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
